--- a/_posts/2021-16-10-Portfolio-1.md
+++ b/_posts/2021-16-10-Portfolio-1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "Case 1 with our Illuminate Teeth product"
-author: "Illuminate Teeth"
+title: "Case 1 with our Illumina Teeth product"
+author: "Illumina Teeth"
 categories: portfolio
 tags: [portfolio]
 #image: cub-2.jpg
